logs/graphite-log-feeder.log
Listing '.'...
Listing './bin'...
Compiling './bin/graphite_log_feeder.py'...
***   File "./bin/graphite_log_feeder.py", line 48
    print """
    usage:  graphite_log_feeder [options] config_file
    
    options include:
        -d, --data-file:
                            path to the log file to ingest.  Overrides
                            the 'log_file' setting in the config file.
                            
        -e, --create_example_config_file-config-file:
                            writes an create_example_config_file configuration file to
                            standard out.  You can modify this create_example_config_file
                            to suit your own needs.
                            
    config_file:
                            path to the file with the graphite_log_feeder
                            settings.  If you don't have a config file, 
                            run 'graphite_log_feeder -e' to get one.
    """
             
                                                     
    
                    
                        
                                                                      
                                                                      
                            
                                                     
                                                                                      
                                                                                         
                                                   
                            
                
                                                                         
                                                                        
                                                                    
      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mtfu_read_random_example.py'...
***   File "./bin/mtfu_read_random_example.py", line 7
    print "usage: mtfu_read_random_example.py <data file> <# of lines to read>"
                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mtfu_read_sequential_multithread_example.py'...
***   File "./bin/mtfu_read_sequential_multithread_example.py", line 14
    print "Starting thread %s, reading %d times" % (self.getName(), self.iterations)
                                               ^
SyntaxError: invalid syntax

Compiling './bin/mtfu_read_sequential_singlethread_example.py'...
***   File "./bin/mtfu_read_sequential_singlethread_example.py", line 8
    print "usage: mtfu_read_sequential_multithread_example.py <data file> <# of lines to read> <# threads>"
                                                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mtfu_reverse_seek_example.py'...
***   File "./bin/mtfu_reverse_seek_example.py", line 7
    print "usage: reverse_seek.py <data file> <search target>"
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mtfu_tail_example.py'...
***   File "./bin/mtfu_tail_example.py", line 7
    print "usage: tail.py <data file> <# of lines to read>"
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/glf'...
Compiling './lib/python3.5/site-packages/glf/engine.py'...
***   File "./lib/python3.5/site-packages/glf/engine.py", line 32
    exec "import %s" % line_reader_module
                   ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/glf/feeder'...
Compiling './lib/python3.5/site-packages/glf/feeder/aggregator.py'...
***   File "./lib/python3.5/site-packages/glf/feeder/aggregator.py", line 38
    print "No time groups specified in '%s' section." %config.get(config_param.DATA_SECTION, config_param.LINE_READER)
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/glf/feeder/line.py'...
***   File "./lib/python3.5/site-packages/glf/feeder/line.py", line 50
    print "Invalid data file"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/glf/logtype'...
Listing './lib/python3.5/site-packages/glf/logtype/grinder'...
Compiling './lib/python3.5/site-packages/glf/logtype/grinder/reader.py'...
***   File "./lib/python3.5/site-packages/glf/logtype/grinder/reader.py", line 59
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/graphite_log_feeder-0.7.6.egg-info'...
Listing './lib/python3.5/site-packages/mtFileUtil-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/mtfileutil'...
Compiling './lib/python3.5/site-packages/mtfileutil/reader.py'...
***   File "./lib/python3.5/site-packages/mtfileutil/reader.py", line 51
    print "FATAL: not a file: '" + dataFile + "'.  Aborting."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mtfileutil/reduce.py'...
***   File "./lib/python3.5/site-packages/mtfileutil/reduce.py", line 39
    print "Writing every %d lines of %s to %s" %(interval, source_file, dest_file)
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mtfileutil/reverse.py'...
***   File "./lib/python3.5/site-packages/mtfileutil/reverse.py", line 78
    print "FATAL: not a file: '" + filename + "'.  No action performed."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
